* Sat Dec 19 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.7.2
- Removed EL6 support

* Fri Sep 18 2020 Liz Nemsick <lnemsick.simp@gmail.com> - 0.7.1
- Advertise EL8 support in metadata.json
- Fixed bad URL to docker's libkv project

* Wed Feb 26 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.7.0
- Changed name of module from libkv to simpkv

* Tue Oct 01 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.7.0
- Merged in changes released with 0.6.1 and on the 'develop' branch
- Documented libkv requirements
  (See 'Requirements' section of docs/Design_Protoype2.md).
- Created and documented design for second prototype
  (See 'Changes from Version 0.6.X' section of docs/Design_Protoype2.md).
- Implemented second prototype and file plugin + store
  to demonstrate the design

* Wed Jan 31 2018 Dylan Cochran <dylan.cochran@onyxpoint.com> - 0.6.1
- Release 0.6.1

* Thu Oct 26 2017 Nick Markowski <nicholas.markowski@onyxpoint.com> - 0.6.0
- (SIMP-3923) Moved libkv::consul to pupmod-simp-simp_consul
- Updated README
- Updated travis with CI credentials

* Wed Oct 25 2017 Dylan Cochran <dylan.cochran@onyxpoint.com> - 0.5.0
- (SIMP-3445) Add acceptance test for consul configuration and bootstrap
- (SIMP-3629) libkv::atomic_put returns false for a successful put on consul >0.9.0

* Thu Aug 24 2017 Dylan Cochran <dylan.cochran@onyxpoint.com> - 0.4.3
- (SIMP-3623) libkv::lookup_key backend should turn softfail on by default
- Add fix for 0.9.x consul installations

* Tue Jul 18 2017 Dylan Cochran <dylan.cochran@onyxpoint.com> - 0.4.2
- (SIMP-3001) Prevent '.' and '..' from being used in keys
- (SIMP-3446) Add parameters to reconfigure http and https listen
- (SIMP-3429) libkv::list isn't always removing keys

* Tue Jul 18 2017 Dylan Cochran <dylan.cochran@onyxpoint.com> - 0.4.1
- Always copy over consul-acl, and update metadata

* Tue Jul 18 2017 Dylan Cochran <dylan.cochran@onyxpoint.com> - 0.4.0
- (SIMP-3275) libkv auto-config uses the root acl
