@@ -1,6 +1,6 @@
 {
   "name": "simp-simpkv",
-  "version": "0.7.2",
+  "version": "0.8.0",
   "author": "simp",
   "summary": "SIMPkv providers",
   "license": "Apache-2.0",
