@@ -1,3 +1,8 @@
+* Tue May 25 2021 Liz Nemsick <lnemsick.simp@gmail.com> - 0.8.0
+- Restrict letter characters used in key and folder names to be
+  lowercase
+  - Change required for LDAP plugin.
+
 * Sat Dec 19 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.7.2
 - Removed EL6 support
 
